--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </section>
 
 <!-- 🌟 Class Toppers Section -->
-<section id="class-toppers" style="padding:70px 0; background:linear-gradient(135deg,#dce9ff,#ffffff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
+<section id="class-toppers" style="padding:70px 0; background:#ffffff; font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
 
   <!-- ✨ Twinkling Star Layers -->
   <div class="stars"></div>
@@ -253,65 +253,90 @@
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
     
-    <!-- 🩵 Heading Box (with fade-in animation) -->
-    <div class="topper-heading-box">
-      <h1 style="font-size:2.2rem; color:#004aad; font-weight:700; letter-spacing:1px; margin:0;">
-        Class Toppers – Half Yearly Examination 2025-26
-      </h1>
-      <div style="width:80px; height:4px; background:#004aad; margin:12px auto 0; border-radius:2px;"></div>
-    </div>
+    <!-- 🩵 Heading (No Box) -->
+    <h1 class="topper-heading" style="font-size:2.2rem; color:#004aad; font-weight:700; letter-spacing:0.5px; margin:0; display:flex; align-items:center; justify-content:center; gap:10px;">
+      <span style="color:#ffb400; font-size:2.2rem;">⭐</span>
+      Class Toppers – Half Yearly Examination 2025-26
+    </h1>
+    <div style="width:80px; height:4px; background:#004aad; margin:12px auto 0; border-radius:2px;"></div>
 
   </div>
 </section>
 
-<!-- 🌠 Star Animation + Heading Animation CSS -->
+<!-- 🌠 Animation & Responsive Style -->
 <style>
 @keyframes twinkle {
-  from {opacity: 0.3;} to {opacity: 1;}
+  from {opacity:0.4;} to {opacity:1;}
 }
 .stars, .stars2, .stars3 {
-  position:absolute; width:100%; height:100%;
+  position:absolute;
+  width:100%;
+  height:100%;
   background-repeat:repeat;
   background-size:contain;
-  animation: twinkle 2s infinite alternate;
-  z-index:1; top:0; left:0;
+  animation:twinkle 2s infinite alternate;
+  z-index:1;
+  top:0;
+  left:0;
 }
-.stars {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:3s;}
-.stars2 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:4s;}
-.stars3 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:5s;}
+.stars {
+  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
+  animation-duration:3s;
+}
+.stars2 {
+  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
+  animation-duration:4s;
+}
+.stars3 {
+  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
+  animation-duration:5s;
+}
 
-/* 🌈 Heading Box Style + Animation */
-.topper-heading-box {
-  display:inline-block;
-  background:rgba(255,255,255,0.9);
-  border:2px solid #004aad;
-  border-radius:15px;
-  padding:20px 35px;
-  box-shadow:0 6px 18px rgba(0,0,0,0.08);
+/* 🌈 Fade-in effect for heading */
+.topper-heading {
   opacity:0;
-  transform:translateY(30px);
+  transform:translateY(25px);
   transition:all 0.8s ease-out;
 }
-
-/* 👇 Animation when visible */
-.topper-heading-box.show {
+.topper-heading.show {
   opacity:1;
   transform:translateY(0);
+}
+
+/* 📱 Responsive heading size */
+@media (max-width:768px) {
+  .topper-heading {
+    font-size:1.8rem;
+    flex-direction:column;
+    gap:6px;
+    text-align:center;
+  }
+  .topper-heading span {
+    font-size:1.8rem;
+  }
+}
+@media (max-width:480px) {
+  .topper-heading {
+    font-size:1.5rem;
+  }
+  .topper-heading span {
+    font-size:1.6rem;
+  }
 }
 </style>
 
 <!-- 🌟 Fade-in Trigger Script -->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  const box = document.querySelector('.topper-heading-box');
+  const heading = document.querySelector('.topper-heading');
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
-        box.classList.add('show');
+        heading.classList.add('show');
       }
     });
   }, { threshold: 0.2 });
-  observer.observe(box);
+  observer.observe(heading);
 });
 </script>
 
@@ -884,6 +909,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
