--- a/index.html
+++ b/index.html
@@ -244,105 +244,21 @@
 </section>
 
 <!-- 🌟 Class Toppers Section -->
-<section id="class-toppers" style="padding:70px 0; background:#ffffff; font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
-
-  <!-- ✨ Twinkling Star Layers -->
+<section id="class-toppers" style="position:relative; padding:70px 0; background:linear-gradient(135deg,#001a33,#003366); font-family:'Poppins',sans-serif; overflow:hidden;">
+  
+  <!-- 🌠 Shining stars background -->
   <div class="stars"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-    
-    <!-- 🩵 Heading (No Box) -->
-    <h2 class="topper-heading" style="font-size:2.2rem; color:#004aad; font-weight:700; letter-spacing:0.5px; margin:0; display:flex; align-items:center; justify-content:center; gap:10px;">
-      <span style="color:#ffb400; font-size:2.2rem;">⭐</span>
-      Class Toppers – Half Yearly Examination 2025-26
+    <h2 style="font-size:1.9rem; color:#fff; margin-bottom:45px; font-weight:700; letter-spacing:0.5px;">
+      🏆 Class Toppers
+      <div style="width:80px; height:3px; background:#4db8ff; margin:10px auto; border-radius:2px;"></div>
     </h2>
-    <div style="width:80px; height:4px; background:#004aad; margin:12px auto 0; border-radius:2px;"></div>
-
-  </div>
-</section>
-
-<!-- 🌠 Animation & Responsive Style -->
-<style>
-@keyframes twinkle {
-  from {opacity:0.4;} to {opacity:1;}
-}
-.stars, .stars2, .stars3 {
-  position:absolute;
-  width:100%;
-  height:100%;
-  background-repeat:repeat;
-  background-size:contain;
-  animation:twinkle 2s infinite alternate;
-  z-index:1;
-  top:0;
-  left:0;
-}
-.stars {
-  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
-  animation-duration:3s;
-}
-.stars2 {
-  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
-  animation-duration:4s;
-}
-.stars3 {
-  background-image:url('https://www.transparenttextures.com/patterns/stardust.png');
-  animation-duration:5s;
-}
-
-/* 🌈 Fade-in effect for heading */
-.topper-heading {
-  opacity:0;
-  transform:translateY(25px);
-  transition:all 0.8s ease-out;
-}
-.topper-heading.show {
-  opacity:1;
-  transform:translateY(0);
-}
-
-/* 📱 Responsive heading size */
-@media (max-width:768px) {
-  .topper-heading {
-    font-size:1.8rem;
-    flex-direction:column;
-    gap:6px;
-    text-align:center;
-  }
-  .topper-heading span {
-    font-size:1.8rem;
-  }
-}
-@media (max-width:480px) {
-  .topper-heading {
-    font-size:1.5rem;
-  }
-  .topper-heading span {
-    font-size:1.6rem;
-  }
-}
-</style>
-
-<!-- 🌟 Fade-in Trigger Script -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const heading = document.querySelector('.topper-heading');
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        heading.classList.add('show');
-      }
-    });
-  }, { threshold: 0.2 });
-  observer.observe(heading);
-});
-</script>
 
     <div class="topper-scroll">
       <div class="scroll-track">
-        
         <!-- 🔹 Class toppers -->
         <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
         <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
@@ -361,6 +277,10 @@ document.addEventListener("DOMContentLoaded", () => {
 
         <!-- Repeated for infinite scroll -->
         <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
         <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
         <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>96%</span></div>
         <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>95%</span></div>
@@ -370,134 +290,103 @@ document.addEventListener("DOMContentLoaded", () => {
         <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>93%</span></div>
         <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>94%</span></div>
         <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>96%</span></div>
-
       </div>
     </div>
   </div>
 
   <style>
-    /* 🌠 Starry Sky Background */
+    /* 🌠 Animated Star Background */
     .stars, .stars2, .stars3 {
       position:absolute;
       top:0; left:0;
       width:100%; height:100%;
       background-repeat:repeat;
-      background-position:0 0;
-      z-index:0;
-      opacity:0.7;
+      background-size:contain;
+      z-index:1;
+      pointer-events:none;
+      animation: moveStars 100s linear infinite, twinkle 3s ease-in-out infinite;
+      opacity:0.9;
     }
 
     .stars {
-      background-image: radial-gradient(2px 2px at 20px 30px, #ffffff 50%, transparent 50%);
-      background-size:200px 200px;
-      animation: twinkle 3s infinite ease-in-out, moveStars 60s linear infinite;
+      background-image: radial-gradient(2px 2px at 20px 30px, #fff, transparent),
+                        radial-gradient(1.5px 1.5px at 40px 70px, #aaf, transparent),
+                        radial-gradient(1px 1px at 100px 150px, #99f, transparent);
     }
 
     .stars2 {
-      background-image: radial-gradient(1.5px 1.5px at 60px 80px, #cce6ff 50%, transparent 50%);
-      background-size:250px 250px;
-      animation: twinkle 5s infinite ease-in-out, moveStars 120s linear infinite;
+      background-image: radial-gradient(1.5px 1.5px at 60px 80px, #aad, transparent),
+                        radial-gradient(1px 1px at 120px 250px, #ccf, transparent);
+      animation-duration: 200s, 4s;
     }
 
     .stars3 {
-      background-image: radial-gradient(1px 1px at 100px 150px, #99ccff 50%, transparent 50%);
-      background-size:300px 300px;
-      animation: twinkle 7s infinite ease-in-out, moveStars 180s linear infinite;
+      background-image: radial-gradient(1px 1px at 200px 300px, #fff, transparent),
+                        radial-gradient(2px 2px at 400px 700px, #aaf, transparent);
+      animation-duration: 300s, 5s;
     }
 
     @keyframes moveStars {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
+      from { transform: translateY(0); }
+      to { transform: translateY(-1000px); }
     }
 
     @keyframes twinkle {
-      0%,100% {opacity:0.7;}
-      50% {opacity:1;}
+      0%, 100% { opacity: 0.8; }
+      50% { opacity: 1; }
     }
 
-    /* 🌿 Auto Scroll */
+    /* 🎓 Scroll Animation */
     .topper-scroll { overflow:hidden; position:relative; }
-    .scroll-track { display:flex; gap:22px; animation:scroll-left 35s linear infinite; width:max-content; }
-    .topper-scroll:hover .scroll-track { animation-play-state:paused; }
-
+    .scroll-track {
+      display:flex;
+      gap:20px;
+      animation: scroll-left 40s linear infinite;
+      width:max-content;
+    }
     @keyframes scroll-left {
-      0% { transform:translateX(0); }
-      100% { transform:translateX(-50%); }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
     }
 
-    /* 🏅 Card Style */
+    /* 💠 Card Styles */
     .topper-card {
-      background:rgba(255,255,255,0.9);
-      backdrop-filter:blur(8px);
+      background:rgba(255,255,255,0.15);
+      border:1px solid rgba(255,255,255,0.3);
       border-radius:18px;
-      box-shadow:0 6px 25px rgba(0,74,173,0.2);
-      padding:28px 22px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.2);
+      padding:25px 20px;
       text-align:center;
-      flex:0 0 210px;
-      min-width:210px;
-      transition:0.5s ease;
-      opacity:0;
-      animation:fadeIn 2s ease forwards;
+      flex:0 0 200px;
+      min-width:200px;
+      transition:0.4s ease;
+      color:#fff;
+      backdrop-filter:blur(8px);
+      animation: fadeInUp 2s ease forwards;
     }
 
-    .topper-card:nth-child(odd){animation-delay:0.3s;}
-    .topper-card:nth-child(even){animation-delay:0.6s;}
-
-    @keyframes fadeIn {
-      from{opacity:0; transform:translateY(20px);}
-      to{opacity:1; transform:translateY(0);}
+    @keyframes fadeInUp {
+      from { opacity:0; transform:translateY(20px); }
+      to { opacity:1; transform:translateY(0); }
     }
 
     .topper-card:hover {
-      transform:scale(1.08);
-      box-shadow:0 10px 35px rgba(0,74,173,0.3);
+      transform:scale(1.06);
+      box-shadow:0 8px 25px rgba(77,184,255,0.4);
     }
 
-    .topper-card h3 {
-      color:#004aad;
-      font-size:1.2rem;
-      margin-bottom:8px;
-      font-weight:700;
-      letter-spacing:0.5px;
-    }
-
-    .topper-card p {
-      color:#333;
-      margin:0;
-      font-size:1rem;
-      font-weight:500;
-    }
-
-    .topper-card span {
-      display:block;
-      margin-top:10px;
-      font-weight:700;
-      font-size:1.1rem;
-      background:linear-gradient(90deg,#0099ff,#66ccff,#00b3ff,#0099ff);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      animation:shimmer 3s infinite linear;
-      background-size:300%;
-    }
-
-    @keyframes shimmer {
-      0%{background-position:0% 50%;}
-      50%{background-position:100% 50%;}
-      100%{background-position:0% 50%;}
-    }
+    .topper-card h3 { color:#4db8ff; font-size:1.05rem; margin-bottom:8px; font-weight:600; }
+    .topper-card p { margin:0; font-size:1rem; font-weight:500; color:#fff; }
+    .topper-card span { display:block; margin-top:8px; color:#ffe066; font-weight:600; font-size:1.1rem; }
 
     /* 📱 Responsive */
     @media(max-width:768px){
-      .topper-card{min-width:250px;padding:30px 20px;}
-      .scroll-track{animation:scroll-left 25s linear infinite;}
-    }
-    @media(max-width:480px){
-      .topper-card{min-width:280px;padding:32px 22px;}
+      h2 { font-size:1.6rem !important; }
+      .topper-card { min-width:240px; padding:28px 18px; }
+      .scroll-track { animation: scroll-left 35s linear infinite; }
     }
   </style>
 </section>
-
-
 
 <!-- ===== CSS STYLES ===== -->
 <style>
@@ -909,6 +798,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
