--- a/index.html
+++ b/index.html
@@ -243,17 +243,18 @@
   </div>
 </section>
 
+
 <!-- 🌟 Class Toppers Section -->
-<section id="class-toppers" style="position:relative; padding:70px 0; background:linear-gradient(135deg,#001a33,#003366); font-family:'Poppins',sans-serif; overflow:hidden;">
+<section id="class-toppers" style="position:relative; padding:70px 0; background:linear-gradient(135deg,#001a33,#004080); font-family:'Poppins',sans-serif; overflow:hidden;">
   
-  <!-- 🌠 Shining stars background -->
+  <!-- ✨ Shining stars background -->
   <div class="stars"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-    <h2 style="font-size:1.9rem; color:#fff; margin-bottom:45px; font-weight:700; letter-spacing:0.5px;">
-      🏆 Class Toppers
+    <h2 style="font-size:2rem; color:#fff; margin-bottom:45px; font-weight:700; letter-spacing:0.5px;">
+      Class Toppers-Half yearly examination 2025-26
       <div style="width:80px; height:3px; background:#4db8ff; margin:10px auto; border-radius:2px;"></div>
     </h2>
 
@@ -295,7 +296,7 @@
   </div>
 
   <style>
-    /* 🌠 Animated Star Background */
+    /* 🌌 Star Background Layers */
     .stars, .stars2, .stars3 {
       position:absolute;
       top:0; left:0;
@@ -304,8 +305,7 @@
       background-size:contain;
       z-index:1;
       pointer-events:none;
-      animation: moveStars 100s linear infinite, twinkle 3s ease-in-out infinite;
-      opacity:0.9;
+      animation: moveStars 100s linear infinite;
     }
 
     .stars {
@@ -317,13 +317,13 @@
     .stars2 {
       background-image: radial-gradient(1.5px 1.5px at 60px 80px, #aad, transparent),
                         radial-gradient(1px 1px at 120px 250px, #ccf, transparent);
-      animation-duration: 200s, 4s;
+      animation-duration: 200s;
     }
 
     .stars3 {
       background-image: radial-gradient(1px 1px at 200px 300px, #fff, transparent),
                         radial-gradient(2px 2px at 400px 700px, #aaf, transparent);
-      animation-duration: 300s, 5s;
+      animation-duration: 300s;
     }
 
     @keyframes moveStars {
@@ -331,12 +331,7 @@
       to { transform: translateY(-1000px); }
     }
 
-    @keyframes twinkle {
-      0%, 100% { opacity: 0.8; }
-      50% { opacity: 1; }
-    }
-
-    /* 🎓 Scroll Animation */
+    /* 🎓 Topper Scroll Animation */
     .topper-scroll { overflow:hidden; position:relative; }
     .scroll-track {
       display:flex;
@@ -344,12 +339,12 @@
       animation: scroll-left 40s linear infinite;
       width:max-content;
     }
+
     @keyframes scroll-left {
       0% { transform: translateX(0); }
       100% { transform: translateX(-50%); }
     }
 
-    /* 💠 Card Styles */
     .topper-card {
       background:rgba(255,255,255,0.15);
       border:1px solid rgba(255,255,255,0.3);
@@ -371,7 +366,7 @@
     }
 
     .topper-card:hover {
-      transform:scale(1.06);
+      transform:scale(1.05);
       box-shadow:0 8px 25px rgba(77,184,255,0.4);
     }
 
@@ -379,7 +374,6 @@
     .topper-card p { margin:0; font-size:1rem; font-weight:500; color:#fff; }
     .topper-card span { display:block; margin-top:8px; color:#ffe066; font-weight:600; font-size:1.1rem; }
 
-    /* 📱 Responsive */
     @media(max-width:768px){
       h2 { font-size:1.6rem !important; }
       .topper-card { min-width:240px; padding:28px 18px; }
@@ -798,6 +792,7 @@
 
 </body>
 </html>
+
 
 
 
