--- a/library.html
+++ b/library.html
@@ -142,9 +142,9 @@
         <!-- Book 1 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/dgcRg1R/quran-book.jpg" alt="Holy Quran" class="card-img-top">
+            <img src="https://i.ibb.co/60chksgp/download.jpg" alt="Holy Quran" class="card-img-top">
             <div class="card-body">
-              <h5>Al-Qur'an (Kareem)</h5>
+              <h5>Al-Qur'an Kareem</h5>
               <p>Read and reflect upon the divine words of Allah.</p>
               <a href="https://quran.com" target="_blank" class="btn btn-success btn-sm">Read Now</a>
             </div>
@@ -154,7 +154,7 @@
         <!-- Book 2 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/xDQkHng/hadith-book.jpg" alt="Hadith Collection" class="card-img-top">
+            <img src="https://i.ibb.co/fGrY3R8v/unnamed.jpg" alt="Hadith Collection" class="card-img-top">
             <div class="card-body">
               <h5>Hadith Collection</h5>
               <p>Sayings and teachings of Prophet Muhammad ﷺ.</p>
@@ -166,7 +166,7 @@
         <!-- Book 3 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/h28sMTd/fiqh-book.jpg" alt="Fiqh" class="card-img-top">
+            <img src="https://i.ibb.co/ksCYZ2QH/download.jpg" alt="Fiqh" class="card-img-top">
             <div class="card-body">
               <h5>Fiqh (Islamic Law)</h5>
               <p>Understanding Islamic jurisprudence and daily rulings.</p>
@@ -178,7 +178,7 @@
         <!-- Book 4 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/LPdwQ7z/seerah-book.jpg" alt="Seerah" class="card-img-top">
+            <img src="https://i.ibb.co/ZphCdnp1/download.jpg" alt="Seerah" class="card-img-top">
             <div class="card-body">
               <h5>Seerah (Prophet’s Life)</h5>
               <p>Learn the beautiful journey of the Messenger ﷺ.</p>
@@ -205,7 +205,7 @@
         <!-- Malayalam Book 1 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/7jm0bsk/malayalam-book1.jpg" alt="Malayalam Book 1" class="card-img-top">
+            <img src="https://i.ibb.co/6Rk9qrV0/download.jpg" alt="Malayalam Book 1" class="card-img-top">
             <div class="card-body">
               <h5>ഇസ്ലാമിക പാഠങ്ങൾ</h5>
               <p>ആധുനിക ജീവിതത്തിൽ ഇസ്ലാമിന്റെ പാഠങ്ങൾ.</p>
@@ -217,7 +217,7 @@
         <!-- Malayalam Book 2 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/N3zpZVg/malayalam-book2.jpg" alt="Malayalam Book 2" class="card-img-top">
+            <img src="https://i.ibb.co/6Rk9qrV0/download.jpg" alt="Malayalam Book 2" class="card-img-top">
             <div class="card-body">
               <h5>പ്രവാചക ജീവിതം</h5>
               <p>നബി (സ) യുടെ മഹത്വം പഠിക്കൂ.</p>
@@ -229,7 +229,7 @@
         <!-- Malayalam Book 3 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="card book-card">
-            <img src="https://i.ibb.co/RDTWQ9L/malayalam-book3.jpg" alt="Malayalam Book 3" class="card-img-top">
+            <img src="https://i.ibb.co/6Rk9qrV0/download.jpg" alt="Malayalam Book 3" class="card-img-top">
             <div class="card-body">
               <h5>ഖുർആൻ സന്ദേശം</h5>
               <p>മലയാള വിവർത്തനത്തോട് കൂടി ഖുർആൻ.</p>
