--- a/index.html
+++ b/index.html
@@ -253,11 +253,10 @@
   <div class="stars3"></div>
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-    <h3 style="font-size:2.3rem; color:#004aad; margin-bottom:50px; font-weight:700; letter-spacing:1px;">
-      Class Toppers-Half Yearly Examination 2025-26
-      <div style="width:90px; height:4px; background:#004aad; margin:12px auto; border-radius:2px;"></div>
-    </h3>
-
+  <h3 style="font-size:1.8rem; color:#004aad; margin-bottom:40px; font-weight:600; letter-spacing:0.5px; font-family:'Poppins', sans-serif; text-align:center;">
+  Class Toppers – Half Yearly Examination 2025-26
+  <div style="width:80px; height:3px; background:#004aad; margin:10px auto; border-radius:2px;"></div>
+  </h3>
     <div class="topper-scroll">
       <div class="scroll-track">
         
@@ -279,6 +278,10 @@
 
         <!-- Repeated for infinite scroll -->
         <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
         <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
         <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>96%</span></div>
         <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>95%</span></div>
@@ -288,7 +291,6 @@
         <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>93%</span></div>
         <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>94%</span></div>
         <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>96%</span></div>
-
       </div>
     </div>
   </div>
@@ -809,6 +811,7 @@
 
 </body>
 </html>
+
 
 
 
