--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
         <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
@@ -227,6 +226,7 @@
         <li class="nav-item"><a class="nav-link" href="login.html" target="_blank">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="library.html" target="_blank">Library</a></li>
+        <li class="nav-item"><a class="nav-link active" href="alumni.html">Alumni</a></li>
       </ul>
       <a href="student-zone.html" class="btn btn-primary ms-lg-3">student zone</a>
     </div>
@@ -811,6 +811,7 @@
 
 </body>
 </html>
+
 
 
 
