--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="#home" target="_blank">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
@@ -811,6 +812,7 @@
 
 </body>
 </html>
+
 
 
 
