--- a/library.html
+++ b/library.html
@@ -233,7 +233,7 @@
             <div class="card-body">
               <h5>ഖുർആൻ സന്ദേശം</h5>
               <p>മലയാള വിവർത്തനത്തോട് കൂടി ഖുർആൻ.</p>
-              <a href="https://quranmalayalam.com" target="_blank" class="btn btn-success btn-sm">Read Online</a>
+              <a href="https://www.muslim-library.com/?lang=Malayalam" target="_blank" class="btn btn-success btn-sm">Read Online</a>
             </div>
           </div>
         </div>
