--- a/alumni.html
+++ b/alumni.html
@@ -1,11 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=under-maintenance.html">
-  <script>
-    window.location.href = "maintenance.html";
-  </script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Madrasa Alumni</title>
+
+<style>
+/* ------------------------------------------------------
+   GLOBAL STYLES
+------------------------------------------------------ */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  transition: 0.3s;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 40px 0;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 2.2rem;
+}
+
+.subline {
+  text-align: center;
+  color: #666;
+  margin-bottom: 40px;
+}
+
+/* ------------------------------------------------------
+   THEME SWITCHER BUTTON
+------------------------------------------------------ */
+.theme-selector {
+  text-align: center;
+  margin: 15px 0 35px;
+}
+.theme-selector select {
+  padding: 10px 15px;
+  font-size: 1rem;
+  border-radius: 6px;
+  border: 1px solid #aaa;
+}
+
+/* ------------------------------------------------------
+   ALUMNI CARDS
+------------------------------------------------------ */
+.alumni-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+}
+
+.alumni-card {
+  background: white;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+.alumni-card:hover {
+  transform: translateY(-6px);
+}
+.alumni-card img {
+  width: 110px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+/* ------------------------------------------------------
+   TESTIMONIALS
+------------------------------------------------------ */
+.testimonials {
+  margin-top: 60px;
+}
+.test-card {
+  padding: 20px;
+  border-radius: 12px;
+  background: white;
+  margin-bottom: 20px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+}
+
+/* ------------------------------------------------------
+   JOIN FORM
+------------------------------------------------------ */
+form {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  margin-top: 60px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+}
+form input, form textarea {
+  width: 100%;
+  padding: 14px;
+  margin-bottom: 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+form button {
+  padding: 14px 20px;
+  background: #222;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+/* ------------------------------------------------------
+   THEMES
+------------------------------------------------------ */
+
+/* 1️⃣ Islamic Green–Gold */
+.theme-1 {
+  background: #f4fff7;
+}
+.theme-1 h1 { color: #066d3a; }
+.theme-1 .alumni-card { border-top: 4px solid #0c8c47; }
+.theme-1 form button { background: #0c8c47; }
+
+/* 2️⃣ Blue–White Modern */
+.theme-2 {
+  background: #eef4ff;
+}
+.theme-2 h1 { color: #004aad; }
+.theme-2 .alumni-card { border-top: 4px solid #004aad; }
+.theme-2 form button { background: #004aad; }
+
+/* 3️⃣ Dark Green Islamic Pattern */
+.theme-3 {
+  background: #0f3d2e url('https://i.ibb.co/W0hSn1g/pattern.png');
+  background-size: 200px;
+  color: white;
+}
+.theme-3 h1 { color: #d4ffdf; }
+.theme-3 .alumni-card { 
+  background: rgba(255,255,255,0.08);
+  color: white;
+  border-top: 4px solid #23c98a;
+}
+.theme-3 .test-card { background: rgba(255,255,255,0.08); color:white; }
+.theme-3 form { background: rgba(255,255,255,0.08); color:white; }
+.theme-3 input, .theme-3 textarea {
+  background: rgba(255,255,255,0.13);
+  border: none;
+  color: white;
+}
+.theme-3 form button { background: #23c98a; }
+
+/* 4️⃣ Minimal White */
+.theme-4 {
+  background: #ffffff;
+}
+.theme-4 h1 { color: #222; }
+.theme-4 .alumni-card { border-top: 4px solid #777; }
+.theme-4 form button { background: #555; }
+</style>
 </head>
-<body>
+<body class="theme-1">
+
+<div class="container">
+
+  <h1>Our Proud Alumni</h1>
+  <p class="subline">Connecting generations of Noorussalam Madrasa students</p>
+
+  <!-- THEME SWITCHER -->
+  <div class="theme-selector">
+      <select onchange="switchTheme(this.value)">
+          <option value="1">Islamic Green–Gold</option>
+          <option value="2">Blue–White Modern</option>
+          <option value="3">Dark Green Islamic Pattern</option>
+          <option value="4">Minimal White</option>
+      </select>
+  </div>
+
+  <!-- ALUMNI CARDS -->
+  <h2>Featured Alumni</h2>
+  <div class="alumni-grid">
+
+      <div class="alumni-card">
+          <img src="https://i.ibb.co/PrLgyqM/user.png">
+          <h3>Abdul Rahman</h3>
+          <p>Batch 2010 — Quran Teacher</p>
+      </div>
+
+      <div class="alumni-card">
+          <img src="https://i.ibb.co/PrLgyqM/user.png">
+          <h3>Fahim Shakir</h3>
+          <p>Batch 2015 — IT Professional</p>
+      </div>
+
+      <div class="alumni-card">
+          <img src="https://i.ibb.co/PrLgyqM/user.png">
+          <h3>Muhammad Bilal</h3>
+          <p>Batch 2012 — Business Owner</p>
+      </div>
+
+  </div>
+
+  <!-- TESTIMONIALS -->
+  <div class="testimonials">
+    <h2>Alumni Words</h2>
+
+    <div class="test-card">
+      “Madrasa shaped my life with discipline and Quranic values.”  
+      <br>— **Abdul Rahman**
+    </div>
+
+    <div class="test-card">
+      “Teachers helped me become who I am today.”  
+      <br>— **Bilal**
+    </div>
+  </div>
+
+  <!-- JOIN FORM -->
+  <h2>Join Our Alumni</h2>
+  <form>
+    <input type="text" placeholder="Full Name" required>
+    <input type="text" placeholder="Batch (Year)" required>
+    <input type="text" placeholder="Current Profession" required>
+    <input type="email" placeholder="Email" required>
+    <textarea rows="4" placeholder="Your Message (Optional)"></textarea>
+    <button type="submit">Submit</button>
+  </form>
+
+</div>
+
+<script>
+function switchTheme(num) {
+  document.body.className = "theme-" + num;
+}
+</script>
+
 </body>
 </html>
