--- a/alumni.html
+++ b/alumni.html
@@ -13,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  background: #eef4ff;
   transition: 0.3s;
 }
 
@@ -26,27 +27,14 @@ body {
 h1 {
   text-align: center;
   margin-bottom: 10px;
+  color: #004aad;
   font-size: 2.2rem;
 }
 
 .subline {
   text-align: center;
-  color: #666;
+  color: #444;
   margin-bottom: 40px;
-}
-
-/* ------------------------------------------------------
-   THEME SWITCHER BUTTON
------------------------------------------------------- */
-.theme-selector {
-  text-align: center;
-  margin: 15px 0 35px;
-}
-.theme-selector select {
-  padding: 10px 15px;
-  font-size: 1rem;
-  border-radius: 6px;
-  border: 1px solid #aaa;
 }
 
 /* ------------------------------------------------------
@@ -63,7 +51,8 @@ h1 {
   border-radius: 12px;
   padding: 20px;
   text-align: center;
-  box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+  border-top: 4px solid #004aad;
+  box-shadow: 0 4px 14px rgba(0,0,0,0.08);
   transition: 0.3s;
 }
 .alumni-card:hover {
@@ -88,7 +77,8 @@ h1 {
   border-radius: 12px;
   background: white;
   margin-bottom: 20px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  border-left: 4px solid #004aad;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.08);
 }
 
 /* ------------------------------------------------------
@@ -99,7 +89,8 @@ form {
   padding: 30px;
   border-radius: 12px;
   margin-top: 60px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+  border-top: 4px solid #004aad;
 }
 form input, form textarea {
   width: 100%;
@@ -110,84 +101,26 @@ form input, form textarea {
 }
 form button {
   padding: 14px 20px;
-  background: #222;
+  background: #004aad;
   color: white;
   border: none;
   border-radius: 6px;
   cursor: pointer;
 }
 
-/* ------------------------------------------------------
-   THEMES
------------------------------------------------------- */
-
-/* 1️⃣ Islamic Green–Gold */
-.theme-1 {
-  background: #f4fff7;
-}
-.theme-1 h1 { color: #066d3a; }
-.theme-1 .alumni-card { border-top: 4px solid #0c8c47; }
-.theme-1 form button { background: #0c8c47; }
-
-/* 2️⃣ Blue–White Modern */
-.theme-2 {
-  background: #eef4ff;
-}
-.theme-2 h1 { color: #004aad; }
-.theme-2 .alumni-card { border-top: 4px solid #004aad; }
-.theme-2 form button { background: #004aad; }
-
-/* 3️⃣ Dark Green Islamic Pattern */
-.theme-3 {
-  background: #0f3d2e url('https://i.ibb.co/W0hSn1g/pattern.png');
-  background-size: 200px;
-  color: white;
-}
-.theme-3 h1 { color: #d4ffdf; }
-.theme-3 .alumni-card { 
-  background: rgba(255,255,255,0.08);
-  color: white;
-  border-top: 4px solid #23c98a;
-}
-.theme-3 .test-card { background: rgba(255,255,255,0.08); color:white; }
-.theme-3 form { background: rgba(255,255,255,0.08); color:white; }
-.theme-3 input, .theme-3 textarea {
-  background: rgba(255,255,255,0.13);
-  border: none;
-  color: white;
-}
-.theme-3 form button { background: #23c98a; }
-
-/* 4️⃣ Minimal White */
-.theme-4 {
-  background: #ffffff;
-}
-.theme-4 h1 { color: #222; }
-.theme-4 .alumni-card { border-top: 4px solid #777; }
-.theme-4 form button { background: #555; }
 </style>
 </head>
-<body class="theme-1">
+<body>
 
 <div class="container">
 
   <h1>Our Proud Alumni</h1>
   <p class="subline">Connecting generations of Noorussalam Madrasa students</p>
 
-  <!-- THEME SWITCHER -->
-  <div class="theme-selector">
-      <select onchange="switchTheme(this.value)">
-          <option value="1">Islamic Green–Gold</option>
-          <option value="2">Blue–White Modern</option>
-          <option value="3">Dark Green Islamic Pattern</option>
-          <option value="4">Minimal White</option>
-      </select>
-  </div>
+  <!-- ALUMNI CARDS (STATIC) -->
+  <h2 style="color:#004aad; text-align:center;">Featured Alumni</h2>
 
-  <!-- ALUMNI CARDS -->
-  <h2>Featured Alumni</h2>
   <div class="alumni-grid">
-
       <div class="alumni-card">
           <img src="https://i.ibb.co/PrLgyqM/user.png">
           <h3>Abdul Rahman</h3>
@@ -205,26 +138,29 @@ form button {
           <h3>Muhammad Bilal</h3>
           <p>Batch 2012 — Business Owner</p>
       </div>
-
   </div>
+
+  <!-- AUTO-LOAD SECTION -->
+  <h2 style="margin-top:50px; color:#004aad; text-align:center;">More Alumni</h2>
+  <div id="alumniContainer" class="alumni-grid"></div>
 
   <!-- TESTIMONIALS -->
   <div class="testimonials">
-    <h2>Alumni Words</h2>
+    <h2 style="color:#004aad;">Alumni Words</h2>
 
     <div class="test-card">
       “Madrasa shaped my life with discipline and Quranic values.”  
-      <br>— **Abdul Rahman**
+      <br><strong>— Abdul Rahman</strong>
     </div>
 
     <div class="test-card">
       “Teachers helped me become who I am today.”  
-      <br>— **Bilal**
+      <br><strong>— Bilal</strong>
     </div>
   </div>
 
   <!-- JOIN FORM -->
-  <h2>Join Our Alumni</h2>
+  <h2 style="color:#004aad;">Join Our Alumni</h2>
   <form>
     <input type="text" placeholder="Full Name" required>
     <input type="text" placeholder="Batch (Year)" required>
@@ -236,10 +172,34 @@ form button {
 
 </div>
 
+<!-- AUTO-LOAD GOOGLE SHEET -->
 <script>
-function switchTheme(num) {
-  document.body.className = "theme-" + num;
+const API = "https://script.google.com/macros/s/AKfycbwUFlkyoBDdXA_JOwmXjU9WRPfQnD5mgiqiEXBdvBH1RtOs05Bg2Wwu76MHibdJu57s7w/exec";
+
+async function loadAlumni() {
+  try {
+    const response = await fetch(API);
+    const data = await response.json();
+
+    let html = "";
+
+    data.forEach(a => {
+      html += `
+      <div class="alumni-card">
+        <img src="${a.photo}">
+        <h3>${a.name}</h3>
+        <p>${a.batch} Batch — ${a.profession}</p>
+      </div>`;
+    });
+
+    document.getElementById("alumniContainer").innerHTML = html;
+
+  } catch (error) {
+    console.error("Error loading alumni:", error);
+  }
 }
+
+loadAlumni();
 </script>
 
 </body>
