--- a/alumni.html
+++ b/alumni.html
@@ -1,206 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Madrasa Alumni</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Madrasa Alumni</title>
 
-<style>
-/* ------------------------------------------------------
-   GLOBAL STYLES
------------------------------------------------------- */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-  background: #eef4ff;
-  transition: 0.3s;
-}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 40px 0;
-}
+  <style>
+    body {
+      background: #f5f9ff;
+      font-family: 'Poppins', sans-serif;
+    }
 
-h1 {
-  text-align: center;
-  margin-bottom: 10px;
-  color: #004aad;
-  font-size: 2.2rem;
-}
+    .section-title {
+      font-size: 2.2rem;
+      font-weight: 700;
+      color: #0054d1;
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-.subline {
-  text-align: center;
-  color: #444;
-  margin-bottom: 40px;
-}
+    .section-line {
+      width: 80px;
+      height: 4px;
+      background: #0054d1;
+      margin: 10px auto 40px;
+      border-radius: 5px;
+    }
 
-/* ------------------------------------------------------
-   ALUMNI CARDS
------------------------------------------------------- */
-.alumni-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 25px;
-}
+    .alumni-card {
+      background: #ffffff;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      padding: 25px;
+      transition: 0.3s;
+      border-top: 5px solid #0054d1;
+    }
 
-.alumni-card {
-  background: white;
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  border-top: 4px solid #004aad;
-  box-shadow: 0 4px 14px rgba(0,0,0,0.08);
-  transition: 0.3s;
-}
-.alumni-card:hover {
-  transform: translateY(-6px);
-}
-.alumni-card img {
-  width: 110px;
-  height: 110px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-bottom: 15px;
-}
+    .alumni-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.12);
+    }
 
-/* ------------------------------------------------------
-   TESTIMONIALS
------------------------------------------------------- */
-.testimonials {
-  margin-top: 60px;
-}
-.test-card {
-  padding: 20px;
-  border-radius: 12px;
-  background: white;
-  margin-bottom: 20px;
-  border-left: 4px solid #004aad;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-}
+    .alumni-img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #0054d1;
+      margin-bottom: 15px;
+    }
 
-/* ------------------------------------------------------
-   JOIN FORM
------------------------------------------------------- */
-form {
-  background: white;
-  padding: 30px;
-  border-radius: 12px;
-  margin-top: 60px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-  border-top: 4px solid #004aad;
-}
-form input, form textarea {
-  width: 100%;
-  padding: 14px;
-  margin-bottom: 12px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-}
-form button {
-  padding: 14px 20px;
-  background: #004aad;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
+    .alumni-name {
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: #003f9e;
+    }
 
-</style>
+    .alumni-year {
+      color: #777;
+      font-size: 0.95rem;
+      margin-bottom: 8px;
+    }
+
+    .alumni-profession {
+      color: #0054d1;
+      font-weight: 500;
+      font-size: 1rem;
+    }
+
+    .testimonial-box {
+      background: #ffffff;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-left: 5px solid #0054d1;
+    }
+
+    .quote {
+      font-size: 1.1rem;
+      color: #333;
+      font-style: italic;
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="container">
+<!-- ⭐ TITLE -->
+<section class="container py-5">
+  <h2 class="section-title">Our Proud Alumni</h2>
+  <div class="section-line"></div>
 
-  <h1>Our Proud Alumni</h1>
-  <p class="subline">Connecting generations of Noorussalam Madrasa students</p>
+  <div class="row g-4">
 
-  <!-- ALUMNI CARDS (STATIC) -->
-  <h2 style="color:#004aad; text-align:center;">Featured Alumni</h2>
-
-  <div class="alumni-grid">
-      <div class="alumni-card">
-          <img src="https://i.ibb.co/PrLgyqM/user.png">
-          <h3>Abdul Rahman</h3>
-          <p>Batch 2010 — Quran Teacher</p>
+    <!-- Card 1 -->
+    <div class="col-md-4">
+      <div class="alumni-card text-center">
+        <img src="https://via.placeholder.com/150" class="alumni-img" />
+        <div class="alumni-name">Ameer</div>
+        <div class="alumni-year">Batch 2010</div>
+        <div class="alumni-profession"> Teacher</div>
       </div>
-
-      <div class="alumni-card">
-          <img src="https://i.ibb.co/PrLgyqM/user.png">
-          <h3>Fahim Shakir</h3>
-          <p>Batch 2015 — IT Professional</p>
-      </div>
-
-      <div class="alumni-card">
-          <img src="https://i.ibb.co/PrLgyqM/user.png">
-          <h3>Muhammad Bilal</h3>
-          <p>Batch 2012 — Business Owner</p>
-      </div>
-  </div>
-
-  <!-- AUTO-LOAD SECTION -->
-  <h2 style="margin-top:50px; color:#004aad; text-align:center;">More Alumni</h2>
-  <div id="alumniContainer" class="alumni-grid"></div>
-
-  <!-- TESTIMONIALS -->
-  <div class="testimonials">
-    <h2 style="color:#004aad;">Alumni Words</h2>
-
-    <div class="test-card">
-      “Madrasa shaped my life with discipline and Quranic values.”  
-      <br><strong>— Abdul Rahman</strong>
     </div>
 
-    <div class="test-card">
-      “Teachers helped me become who I am today.”  
-      <br><strong>— Bilal</strong>
+    <!-- Card 2 -->
+    <div class="col-md-4">
+      <div class="alumni-card text-center">
+        <img src="https://via.placeholder.com/150" class="alumni-img" />
+        <div class="alumni-name">Shihab P</div>
+        <div class="alumni-year">Batch 2001</div>
+        <div class="alumni-profession">Engineer</div>
+      </div>
     </div>
+
+    <!-- Card 3 -->
+    <div class="col-md-4">
+      <div class="alumni-card text-center">
+        <img src="https://via.placeholder.com/150" class="alumni-img" />
+        <div class="alumni-name">Muhsin P</div>
+        <div class="alumni-year">Batch 2019</div>
+        <div class="alumni-profession">Public Speaker</div>
+      </div>
+    </div>
+
   </div>
+</section>
 
-  <!-- JOIN FORM -->
-  <h2 style="color:#004aad;">Join Our Alumni</h2>
-  <form>
-    <input type="text" placeholder="Full Name" required>
-    <input type="text" placeholder="Batch (Year)" required>
-    <input type="text" placeholder="Current Profession" required>
-    <input type="email" placeholder="Email" required>
-    <textarea rows="4" placeholder="Your Message (Optional)"></textarea>
-    <button type="submit">Submit</button>
-  </form>
+<!-- ⭐ TESTIMONIALS -->
+<section class="container pb-5">
+  <h2 class="section-title">Alumni Messages</h2>
+  <div class="section-line"></div>
 
-</div>
+  <div class="row g-4">
 
-<!-- AUTO-LOAD GOOGLE SHEET -->
-<script>
-const API = "https://script.google.com/macros/s/AKfycbwUFlkyoBDdXA_JOwmXjU9WRPfQnD5mgiqiEXBdvBH1RtOs05Bg2Wwu76MHibdJu57s7w/exec";
+    <div class="col-md-6">
+      <div class="testimonial-box">
+        <p class="quote">
+          “Studying at Noorussalam Madrasa changed my life. The discipline and Islamic values I learned continue to guide me.”
+        </p>
+        <p class="mt-3"><strong>— Hafiz Shahajas, Batch 2018</strong></p>
+      </div>
+    </div>
 
-async function loadAlumni() {
-  try {
-    const response = await fetch(API);
-    const data = await response.json();
+    <div class="col-md-6">
+      <div class="testimonial-box">
+        <p class="quote">
+          “The teachers at Noorussalam always encouraged us to excel. Today I work in IT, but my foundation is from this Madrasa.”
+        </p>
+        <p class="mt-3"><strong>— Amanudheen, Batch 2020</strong></p>
+      </div>
+    </div>
 
-    let html = "";
-
-    data.forEach(a => {
-      html += `
-      <div class="alumni-card">
-        <img src="${a.photo}">
-        <h3>${a.name}</h3>
-        <p>${a.batch} Batch — ${a.profession}</p>
-      </div>`;
-    });
-
-    document.getElementById("alumniContainer").innerHTML = html;
-
-  } catch (error) {
-    console.error("Error loading alumni:", error);
-  }
-}
-
-loadAlumni();
-</script>
+  </div>
+</section>
 
 </body>
 </html>
