Add fixed home button to alumni.html
Added a fixed home button to the alumni page.

--- a/alumni.html
+++ b/alumni.html
@@ -155,6 +155,25 @@
 
   </div>
 </section>
+<a href="index.html"
+   style="
+     position: fixed; 
+     left: 20px; 
+     bottom: 20px;
+     background: #0054d1; 
+     color: white; 
+     padding: 12px 22px;
+     border-radius: 50px; 
+     text-decoration: none; 
+     font-weight: 600; 
+     box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+     z-index: 999;
+     transition: 0.3s;
+   "
+   onmouseover="this.style.transform='scale(1.06)'"
+   onmouseout="this.style.transform='scale(1)'">
+  ⬅ Home
+</a>
 
 </body>
 </html>
