--- a/alumni.html
+++ b/alumni.html
@@ -155,25 +155,25 @@
 
   </div>
 </section>
-<a href="index.html"
-   style="
-     position: fixed; 
-     left: 20px; 
-     bottom: 20px;
-     background: #0054d1; 
-     color: white; 
-     padding: 12px 22px;
-     border-radius: 50px; 
-     text-decoration: none; 
-     font-weight: 600; 
-     box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-     z-index: 999;
-     transition: 0.3s;
-   "
-   onmouseover="this.style.transform='scale(1.06)'"
-   onmouseout="this.style.transform='scale(1)'">
-  ⬅ Home
-</a>
-
+<!-- BACK TO HOME BUTTON -->
+<div style="text-align:center; margin-bottom:35px;">
+  <a href="index.html"
+     style="
+       display:inline-block;
+       background:#0054d1;
+       color:white;
+       padding:12px 28px;
+       border-radius:50px;
+       text-decoration:none;
+       font-weight:600;
+       font-size:1rem;
+       box-shadow:0 6px 18px rgba(0, 84, 209, 0.3);
+       transition:0.3s ease;
+     "
+     onmouseover="this.style.boxShadow='0 8px 25px rgba(0, 84, 209, 0.55)'; this.style.transform='translateY(-3px)'"
+     onmouseout="this.style.boxShadow='0 6px 18px rgba(0, 84, 209, 0.3)'; this.style.transform='translateY(0)'">
+    ⬅ Back to Home
+  </a>
+</div>
 </body>
 </html>
